# hexlet_pytest

./: pyproject.toml
tests/: test_example.py
tests/test_data/: after.txt
